feat(home/mangowc): add dpms script + binds

--- a/home/mangowc/config.conf
+++ b/home/mangowc/config.conf
@@ -152,8 +152,10 @@ bind=SUPER+SHIFT,Return,spawn,fuzzel
 bind=SUPER,      f,     spawn,emacsclient -c
 
 # lock
-bind=SUPER,      grave,spawn,hyprlock
+bind=SUPER,      grave,spawn,      hyprlock
 bind=SUPER+SHIFT,grave,spawn_shell,hyprlock & sleep 1 && systemctl suspend
+bind=SUPER,      Escape,  spawn,      mangowc-dpms off
+bind=SUPER+SHIFT,Escape,  spawn,      mangowc-dpms on
 
 # exit
 bind=SUPER+SHIFT,x,quit
