feat(home/mangowc): mark ghostty as terminal for swallowing

--- a/home/mangowc/config.conf
+++ b/home/mangowc/config.conf
@@ -279,6 +279,7 @@ layerrule=animation_type_close:zoom,layer_name:fuzzel
 # window rule
 windowrule=appid:emacs,title:^\*vertico-popup-\d+\*$,isfloating:1,isnoradius:1,isoverlay:1
 windowrule=appid:emacs,title:^\*transient\*,isfloating:1,isnoradius:1,isoverlay:1,isopensilent:1
+windowrule=appid:ghostty,isterm:1
 
 # monitors
 #           name,    mfact,nmaster,layout,  transform,scale,x,   y,  width,height,refreshrate
