fix(home/mangowc): add monitorrule for nightcrawler

--- a/home/mangowc/config.conf
+++ b/home/mangowc/config.conf
@@ -285,6 +285,8 @@ windowrule=appid:ghostty,isterm:1
 #           name,    mfact,nmaster,layout,  transform,scale,x,   y,  width,height,refreshrate
 monitorrule=DP-2,    0.5,  1,      scroller,0,        1.25, 0,   0,  2560, 1440,  144
 monitorrule=HDMI-A-1,0.5,  1,      scroller,0,        1,    2048,360,1920, 1080,  60
+monitorrule=eDP-1,   0.5,  1,      scroller,0,        1.4,  0,   0,  2256, 1504,  60
+# TODO separate per-device
 
 # autostart
 exec-once=eww open bar --size 40x$(wlr-randr --json | jaq '.[] | select(.position.x == 0 and .position.y == 0) | (.modes[] | select(.current) | .height) / .scale - 16')
