feat(home/mangowc): update keybinds to enthium

--- a/home/mangowc/config.conf
+++ b/home/mangowc/config.conf
@@ -144,12 +144,12 @@ overlaycolor=0x14a57cff
 # mod keys name: super,ctrl,alt,shift,none
 
 # reload config
-bind=SUPER+SHIFT,p,reload_config
+bind=SUPER+SHIFT,u,reload_config
 
 # applications
 bind=SUPER,      Return,spawn,ghostty
 bind=SUPER+SHIFT,Return,spawn,fuzzel
-bind=SUPER,      f,     spawn,emacsclient -c
+bind=SUPER,      o,     spawn,emacsclient -c
 
 # lock
 bind =SUPER,      grave, spawn,      hyprlock
@@ -158,44 +158,44 @@ bindl=SUPER,      Escape,spawn,      mangowc-dpms off
 bindl=SUPER+SHIFT,Escape,spawn,      mangowc-dpms on
 
 # exit
-bind=SUPER+SHIFT,x,quit
-bind=SUPER,      d,killclient
+bind=SUPER,      q,killclient
+bind=SUPER+SHIFT,q,quit
 
 # switch window focus
 bind=SUPER,Tab,  focusstack,next
-bind=SUPER,n,    focusdir,  left
-bind=SUPER,e,    focusdir,  down
-bind=SUPER,i,    focusdir,  up
-bind=SUPER,o,    focusdir,  right
+bind=SUPER,h,    focusdir,  left
+bind=SUPER,t,    focusdir,  down
+bind=SUPER,n,    focusdir,  up
+bind=SUPER,s,    focusdir,  right
 bind=SUPER,Left, focusdir,  left
 bind=SUPER,Down, focusdir,  down
 bind=SUPER,Up,   focusdir,  up
 bind=SUPER,Right,focusdir,  right
 
 # swap window
-bind=SUPER+SHIFT,n,    exchange_client,left
-bind=SUPER+SHIFT,e,    exchange_client,down
-bind=SUPER+SHIFT,i,    exchange_client,up
-bind=SUPER+SHIFT,o,    exchange_client,right
+bind=SUPER+SHIFT,h,    exchange_client,left
+bind=SUPER+SHIFT,t,    exchange_client,down
+bind=SUPER+SHIFT,n,    exchange_client,up
+bind=SUPER+SHIFT,s,    exchange_client,right
 bind=SUPER+SHIFT,Left, exchange_client,left
 bind=SUPER+SHIFT,Down, exchange_client,down
 bind=SUPER+SHIFT,Up,   exchange_client,up
 bind=SUPER+SHIFT,Right,exchange_client,right
 
 # switch window status
-bind=SUPER,      g,    toggleglobal
-bind=SUPER,      Tab,  toggleoverview
-bind=SUPER,      w,    togglefloating
-bind=SUPER,      t,    togglemaximizescreen,
-bind=SUPER+SHIFT,f,    togglefullscreen
-bind=SUPER+ALT,  f,    togglefakefullscreen
-bind=SUPER,      z,    minimized
-bind=SUPER+SHIFT,z,    restore_minimized
-bind=SUPER,      slash,toggle_scratchpad
+bind=SUPER,      g,        toggleglobal
+bind=SUPER,      Tab,      toggleoverview
+bind=SUPER,      f,        togglefloating
+bind=SUPER,      e,        togglemaximizescreen,
+bind=SUPER+SHIFT,e,        togglefullscreen
+bind=SUPER+ALT,  e,        togglefakefullscreen
+bind=SUPER,      v,        minimized
+bind=SUPER+SHIFT,v,        restore_minimized
+bind=SUPER,      semicolon,toggle_scratchpad
 
 # scroller layout
 # bind=SUPER,t,set_proportion,1.0
-bind=SUPER,c,switch_proportion_preset
+bind=SUPER,a,switch_proportion_preset
 
 # switch layout
 bind=SUPER,backslash,switch_layout
@@ -231,10 +231,10 @@ bind=SUPER+SHIFT,8,tag,8,0
 bind=SUPER+SHIFT,9,tag,9,0
 
 # monitor switch
-bind=SUPER,      r,focusmon,left
-bind=SUPER,      s,focusmon,right
-bind=SUPER+SHIFT,r,tagmon,  left
-bind=SUPER+SHIFT,s,tagmon,  right
+bind=SUPER,      i,focusmon,left
+bind=SUPER,      a,focusmon,right
+bind=SUPER+SHIFT,i,tagmon,  left
+bind=SUPER+SHIFT,a,tagmon,  right
 
 # gaps
 # bind=ALT+SHIFT,X,incgaps,1
