fix(home/mangowc): conflicting binds

--- a/home/mangowc/config.conf
+++ b/home/mangowc/config.conf
@@ -195,7 +195,7 @@ bind=SUPER,      semicolon,toggle_scratchpad
 
 # scroller layout
 # bind=SUPER,t,set_proportion,1.0
-bind=SUPER,a,switch_proportion_preset
+bind=SUPER,c,switch_proportion_preset
 
 # switch layout
 bind=SUPER,backslash,switch_layout
