feat(home/mangowc): brightness binds

--- a/home/mangowc/config.conf
+++ b/home/mangowc/config.conf
@@ -271,6 +271,11 @@ bindl=NONE,XF86AudioPause,spawn,playerctl pause
 bindl=NONE,XF86AudioPrev, spawn,playerctl previous
 bindl=NONE,XF86AudioNext, spawn,playerctl next
 
+# brightness
+bindl=NONE, XF86MonBrightnessUp,  spawn,brightnessctl --class=backlight set +10%
+bindl=NONE, XF86MonBrightnessDown,spawn,brightnessctl --class=backlight set  10%-
+bindl=SHIFT,XF86MonBrightnessUp,  spawn,brightnessctl --class=backlight set +1%
+bindl=SHIFT,XF86MonBrightnessDown,spawn,brightnessctl --class=backlight set  1%-
 
 # layer rule
 layerrule=animation_type_open:zoom,layer_name:fuzzel
