feat(home/mangowc): volume binds

--- a/home/mangowc/config.conf
+++ b/home/mangowc/config.conf
@@ -265,6 +265,14 @@ mousebind=NONE,btn_right,killclient,0
 axisbind=SUPER,UP,viewtoleft_have_client
 axisbind=SUPER,DOWN,viewtoright_have_client
 
+# volume
+bindl=NONE, XF86AudioRaiseVolume,spawn,wpctl set-volume @DEFAULT_AUDIO_SINK@   0.1+
+bindl=NONE, XF86AudioLowerVolume,spawn,wpctl set-volume @DEFAULT_AUDIO_SINK@   0.1-
+bindl=SHIFT,XF86AudioRaiseVolume,spawn,wpctl set-volume @DEFAULT_AUDIO_SINK@   0.01+
+bindl=SHIFT,XF86AudioLowerVolume,spawn,wpctl set-volume @DEFAULT_AUDIO_SINK@   0.01-
+bindl=NONE, XF86AudioMute,       spawn,wpctl set-mute   @DEFAULT_AUDIO_SINK@   toggle
+bindl=NONE, XF86AudioMicMute,    spawn,wpctl set-mute   @DEFAULT_AUDIO_SOURCE@ toggle
+
 # media
 bindl=NONE,XF86AudioPlay, spawn,playerctl play-pause
 bindl=NONE,XF86AudioPause,spawn,playerctl pause
