feat(home/mangowc): screenshots

--- a/home/mangowc/config.conf
+++ b/home/mangowc/config.conf
@@ -285,9 +285,13 @@ bindl=NONE, XF86MonBrightnessDown,spawn,brightnessctl --class=backlight set  10%
 bindl=SHIFT,XF86MonBrightnessUp,  spawn,brightnessctl --class=backlight set +1%
 bindl=SHIFT,XF86MonBrightnessDown,spawn,brightnessctl --class=backlight set  1%-
 
+# screenshots
+bind=NONE,Print,spawn_shell,grim -g "$(slurp)" - | wl-copy -t image/png
+
 # layer rule
 layerrule=animation_type_open:zoom,layer_name:fuzzel
 layerrule=animation_type_close:zoom,layer_name:fuzzel
+layerrule=noblur:1,layer_name:selection
 
 # window rule
 windowrule=appid:emacs,title:^\*vertico-popup-\d+\*$,isfloating:1,isnoradius:1,isoverlay:1
