--- a/home/mangowc/config.conf
+++ b/home/mangowc/config.conf
@@ -288,6 +288,15 @@ bindl=SHIFT,XF86MonBrightnessDown,spawn,brightnessctl --class=backlight set  1%-
 # screenshots
 bind=NONE,Print,spawn_shell,grim -g "$(slurp)" - | wl-copy -t image/png
 
+# 3-finger swipe to move focus
+gesturebind=none,left,3,focusdir,right
+gesturebind=none,right,3,focusdir,left
+gesturebind=none,up,3,viewtoright,0
+gesturebind=none,down,3,viewtoleft,0
+
+# 4-finger swipe to switch workspace
+gesturebind=none,up,4,toggleoverview
+
 # layer rule
 layerrule=animation_type_open:zoom,layer_name:fuzzel
 layerrule=animation_type_close:zoom,layer_name:fuzzel
