feat(home/mangowc): lid binds for laptop

--- a/home/mangowc/config.conf
+++ b/home/mangowc/config.conf
@@ -297,6 +297,9 @@ gesturebind=none,down,3,viewtoleft,0
 # 4-finger swipe to switch workspace
 gesturebind=none,up,4,toggleoverview
 
+# laptop lid binds
+switchbind=fold,spawn_shell,hyprlock & sleep 0.5 && systemctl suspend
+
 # layer rule
 layerrule=animation_type_open:zoom,layer_name:fuzzel
 layerrule=animation_type_close:zoom,layer_name:fuzzel
