feat(home/mangowc): resize submap

--- a/home/mangowc/config.conf
+++ b/home/mangowc/config.conf
@@ -253,6 +253,33 @@ bind=SUPER+SHIFT,a,tagmon,  right
 # bind=CTRL+ALT,Left,resizewin,-50,+0
 # bind=CTRL+ALT,Right,resizewin,+50,+0
 
+# modes
+keymode=common
+bindp=NONE,Escape,setkeymode,default
+
+# resize
+keymode=default
+bind=SUPER,U,setkeymode,resize
+
+keymode=resize
+bind=NONE, h,    resizewin,-25, +0
+bind=SHIFT,h,    resizewin, -5, +0
+bind=NONE, t,    resizewin, +0,+25
+bind=SHIFT,t,    resizewin, +0, +5
+bind=NONE, n,    resizewin, +0,-25
+bind=SHIFT,n,    resizewin, +0, -5
+bind=NONE, s,    resizewin,+25, +0
+bind=SHIFT,s,    resizewin, +5, +0
+bind=NONE, Left, resizewin,-25, +0
+bind=SHIFT,Left, resizewin, -5, +0
+bind=NONE, Down, resizewin, +0,+25
+bind=SHIFT,Down, resizewin, +0, +5
+bind=NONE, Up,   resizewin, +0,-25
+bind=SHIFT,Up,   resizewin, +0, -5
+bind=NONE, Right,resizewin,+25, +0
+bind=SHIFT,Right,resizewin, +5, +0
+keymode=default
+
 # Mouse Button Bindings
 # NONE mode key only work in ov mode
 mousebind=SUPER,btn_left,moveresize,curmove
