feat(home/mangowc): layout submap

--- a/home/mangowc/config.conf
+++ b/home/mangowc/config.conf
@@ -197,9 +197,6 @@ bind=SUPER,      semicolon,toggle_scratchpad
 # bind=SUPER,t,set_proportion,1.0
 bind=SUPER,c,switch_proportion_preset
 
-# switch layout
-bind=SUPER,backslash,switch_layout
-
 # tag switch
 bind=SUPER,      comma, viewtoleft, 0
 bind=SUPER+SHIFT,comma, tagtoleft,  0
@@ -278,6 +275,37 @@ bind=NONE, Up,   resizewin, +0,-25
 bind=SHIFT,Up,   resizewin, +0, -5
 bind=NONE, Right,resizewin,+25, +0
 bind=SHIFT,Right,resizewin, +5, +0
+keymode=default
+
+# layout
+keymode=default
+bind=SUPER,backslash,setkeymode,layout
+
+keymode=layout
+bind=NONE,t,setlayout,tile
+bind=NONE,t,setkeymode,default
+bind=NONE,s,setlayout,scroller
+bind=NONE,s,setkeymode,default
+bind=NONE,m,setlayout,monocle
+bind=NONE,m,setkeymode,default
+bind=NONE,g,setlayout,grid
+bind=NONE,g,setkeymode,default
+bind=NONE,d,setlayout,deck
+bind=NONE,d,setkeymode,default
+bind=NONE,c,setlayout,center_tile
+bind=NONE,c,setkeymode,default
+bind=NONE,r,setlayout,right_tile
+bind=NONE,r,setkeymode,default
+bind=NONE,x,setlayout,tgmix
+bind=NONE,x,setkeymode,default
+bind=SHIFT,t,setlayout,vertical_tile
+bind=SHIFT,t,setkeymode,default
+bind=SHIFT,s,setlayout,vertical_scroller
+bind=SHIFT,s,setkeymode,default
+bind=SHIFT,g,setlayout,vertical_grid
+bind=SHIFT,g,setkeymode,default
+bind=SHIFT,d,setlayout,vertical_deck
+bind=SHIFT,d,setkeymode,default
 keymode=default
 
 # Mouse Button Bindings
