feat(home/mangowc): use uwsm for apps

--- a/home/mangowc/config.conf
+++ b/home/mangowc/config.conf
@@ -149,7 +149,7 @@ bind=SUPER+SHIFT,u,reload_config
 # applications
 bind=SUPER,      Return,spawn,ghostty
 bind=SUPER+SHIFT,Return,spawn,fuzzel
-bind=SUPER,      o,     spawn,emacsclient -c
+bind=SUPER,      o,     spawn,uwsm-app -- emacsclient -c
 
 # lock
 bind =SUPER,      grave, spawn,      hyprlock
@@ -159,7 +159,7 @@ bindl=SUPER+SHIFT,Escape,spawn,      mangowc-dpms on
 
 # exit
 bind=SUPER,      q,killclient
-bind=SUPER+SHIFT,q,quit
+bind=SUPER+SHIFT,q,spawn,uwsm stop
 
 # switch window focus
 bind=SUPER,Tab,  focusstack,next
@@ -373,6 +373,6 @@ monitorrule=eDP-1,   0.5,  1,      scroller,0,        1.4,  0,   0,  2256, 1504,
 # TODO separate per-device
 
 # autostart
-exec-once=eww open bar --size 40x$(wlr-randr --json | jaq '.[] | select(.position.x == 0 and .position.y == 0) | (.modes[] | select(.current) | .height) / .scale - 16')
-exec-once=playerctld daemon
-exec-once=keepassxc
+exec-once=uwsm-app -s b -- eww open bar --size 40x$(wlr-randr --json | jaq '.[] | select(.position.x == 0 and .position.y == 0) | (.modes[] | select(.current) | .height) / .scale - 16')
+exec-once=uwsm-app -s b -- playerctld daemon
+exec-once=uwsm-app -- keepassxc
