--- a/home/mangowc/config.conf
+++ b/home/mangowc/config.conf
@@ -149,7 +149,7 @@ bind=SUPER+SHIFT,u,reload_config
 # applications
 bind=SUPER,      Return,spawn,ghostty
 bind=SUPER+SHIFT,Return,spawn,fuzzel
-bind=SUPER,      o,     spawn,uwsm app -- emacsclient -c
+bind=SUPER,      o,     spawn,runapp -o -- emacsclient -c
 
 # lock
 bind =SUPER,      grave, spawn,      hyprlock
@@ -373,6 +373,6 @@ monitorrule=eDP-1,   0.5,  1,      scroller,0,        1.4,  0,   0,  2256, 1504,
 # TODO separate per-device
 
 # autostart
-exec-once=uwsm app -s b -- eww open bar --size 40x$(wlr-randr --json | jaq '.[] | select(.position.x == 0 and .position.y == 0) | (.modes[] | select(.current) | .height) / .scale - 16')
-exec-once=uwsm app -s b -- playerctld daemon
-exec-once=uwsm app -- keepassxc
+exec-once=runapp -i background-graphical.slice -- eww open bar --size 40x$(wlr-randr --json | jaq '.[] | select(.position.x == 0 and .position.y == 0) | (.modes[] | select(.current) | .height) / .scale - 16')
+exec-once=runapp -i background-graphical.slice -- playerctld daemon
+exec-once=runapp -- keepassxc
