fix(home/mangowc): new monitorrule syntax

--- a/home/mangowc/config.conf
+++ b/home/mangowc/config.conf
@@ -366,10 +366,9 @@ windowrule=appid:emacs,title:^\*transient\*,isfloating:1,isnoradius:1,isoverlay:
 windowrule=appid:ghostty,isterm:1
 
 # monitors
-#           name,    mfact,nmaster,layout,  transform,scale,x,   y,  width,height,refreshrate
-monitorrule=DP-2,    0.5,  1,      scroller,0,        1.25, 0,   0,  2560, 1440,  144
-monitorrule=HDMI-A-1,0.5,  1,      scroller,0,        1,    2048,360,1920, 1080,  60
-monitorrule=eDP-1,   0.5,  1,      scroller,0,        1.4,  0,   0,  2256, 1504,  60
+monitorrule=name:DP-2,    width:2560,height:1440,refresh:144,scale:1.25,x:0,   y:0
+monitorrule=name:HDMI-A-1,width:1920,height:1080,refresh:60, scale:1,   x:2048,y:360
+monitorrule=name:eDP-1,   width:2256,height:1504,refresh:60, scale:1.4, x:0,   y:0
 # TODO separate per-device
 
 # autostart
