feat(home/mangowc): add wl-kbptr script

--- a/home/mangowc/config.conf
+++ b/home/mangowc/config.conf
@@ -250,6 +250,8 @@ bind=SUPER+SHIFT,a,tagmon,  right
 # bind=CTRL+ALT,Left,resizewin,-50,+0
 # bind=CTRL+ALT,Right,resizewin,+50,+0
 
+bind=SUPER,j,spawn,mangowc-wl-kbptr
+
 # modes
 keymode=common
 bindp=NONE,Escape,setkeymode,default
