feat(home/mangowc): applications submap

--- a/home/mangowc/config.conf
+++ b/home/mangowc/config.conf
@@ -149,7 +149,19 @@ bind=SUPER+SHIFT,u,reload_config
 # applications
 bind=SUPER,      Return,spawn,ghostty
 bind=SUPER+SHIFT,Return,spawn,fuzzel
-bind=SUPER,      o,     spawn,runapp -o -- emacsclient -c
+bind=SUPER,      o,     spawn,runapp -- emacsclient -c
+
+keymode=default
+bind=SUPER,p,setkeymode,applications
+
+keymode=applications
+bind=NONE,b,spawn,runapp -- zen
+bind=NONE,b,setkeymode,default
+bind=SHIFT,b,spawn,mangowc-focus-or-spawn brave-browser brave
+bind=SHIFT,b,setkeymode,default
+bind=NONE,g,spawn,mangowc-focus-or-spawn signal signal-desktop
+bind=NONE,g,setkeymode,default
+keymode=default
 
 # lock
 bind =SUPER,      grave, spawn,      hyprlock
